<resources>
    <string name="app_name" translatable="false">Minichat</string>
    <string name="title_activity_main">Sign in</string>
    <string name="err_no_network">You aren\'t connect to any Wi-Fi network</string>
    <string name="err_no_net_action">Connect</string>
    <string name="connected">Connected!</string>
    <string name="no_connection">No connection, the App will not work without internet access</string>
    <string name="title_register_act">Create User</string>
    <string name="prompt_login">User name</string>
    <string name="prompt_user">User name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_user_length">User Name should not contain more than 70 characters</string>
    <string name="error_email_lenght">An Email should not contain more than 254 characters</string>
    <string name="error_user_special_chars">The User can not have special characters</string>
    <string name="error_password_lenght_max">Password should have at maximum 70 characters</string>
    <string name="password_strength">Password Strength:</string>
    <string name="password_strong">Strong</string>
    <string name="password_medium">Medium</string>
    <string name="password_weak">Weak</string>
    <string name="sign_up">Sign Up</string>
    <string name="pls_wait">Please wait</string>
    <string name="c_password">Confirm the password</string>
    <string name="error_c_password">Passwords aren\'t the same</string>
    <string name="prompt_email">Email</string>
    <string name="error_email_invalid">This email address is invalid</string>
    <string name="new_user_success">User successfully created</string>
    <string name="error_user_exists">This user already exists</string>
    <string name="error_email_exists">This email is already linked in other account</string>

    <string name="title_activity_user">Home Page</string>
    <string name="drawer_messages">Messages</string>
    <string name="account_section">Account Options</string>

    <string name="confirm_ald_title">Do you want to Log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_field_title">Fill login field automatically</string>
    <string name="pref_filed_summary">If this option is activated, when you create a new user and return
    to login page, the login field will be automatically filled</string>
    <string name="logout">Logout</string>

    <string name="new_new">New</string>
    <string name="fab_new_post">Public Post</string>
    <string name="publish">Post it!</string>
    <string name="error_post_null">What are you wanting to post?</string>
    <string name="fab_new_message">Message</string>

    <string-array name="pref_example_list_titles">
        <item>User</item>
        <item>Email</item>
        <item>None</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>

    <string-array name="tab_title">
        <item>New Post</item>
        <item>Messages</item>
    </string-array>

    <string name="edt_mhint">Send a message</string>
    <string name="post_hint">What are you thinking?</string>
    <string name="dlg_load_users_title">Loading Available Users</string>
    <string name="check_net">Please, check your internet connection</string>
    <string name="pick_up">Pick up someone:</string>
    <string name="posts">Posts</string>
    <string name="sending">Sending</string>
    <string name="msg_empty">Why do you want to send an empty message?</string>
    <string name="get_messages">Getting Messages</string>
    <string name="pref_update_title">Check for updates</string>
    <string name="fastconfig_item_title">Fast Settings</string>
    <string name="update_av_title">Yeah, a new update is available!!!</string>
    <string name="update_av_msg">Do you want to download it?\n\n</string>
    <string name="update_this_ver">This version: </string>
    <string name="update_new_ver">\nNew version: </string>
    <string name="not_now">Not now</string>
    <string name="ofcourse">Of Course!</string>

    <string name="app_colors">Application Colors</string>
    <string name="primary_color_pref">Primary Color</string>
    <string name="primary_color_summ">Choose the Primary Color of the Application</string>
    <string name="accent_color_pref">Accent Color</string>
    <string name="accent_color_summ">Choose the Accent color in the App</string>
    <string name="updating">Updating</string>
    <string name="downloading">Downloading: %.1f%%</string>
    <string name="down_success">File Downloaded</string>
    <string name="login_incorrect">Incorrect Credencials</string>
    <string name="all_app_colors">All Application Colors</string>
    <string name="post_colors">Post Colors</string>
    <string name="posts_text">Post Text</string>
    <string name="posts_author">Post Author</string>
    <string name="posts_data">Post Date</string>
    <string name="post_sucess">Successfully Posted</string>
    <string name="time_exceeded">Time Limit Exceeded</string>
    <string name="up_to_date">Your App is up to date</string>
    <string name="downloading_literaly">Downloading</string>
    <string name="touch_here">Touch here to Install it</string>
    <string name="error_download">An error occurred during download</string>
    <string name="error_lit">Error</string>
    <string name="colors_lit">Colors</string>
    <string name="about">About</string>
    <string name="pref_update_summary">Version %s</string>
    <string name="other_options">Other Options</string>
    <string name="social" translatable="false">Social</string>
    <string name="verifying">Verifying for Updates</string>

    <string name="post_fomated">%s of %s at %s</string>
    <string name="refresh_alr_running">Already Running</string>
    <string name="title_discover">Available People</string>
    <string name="title_discover_drawer">Discover</string>
    <string name="menu_refresh_title">Reload Available People</string>

    <string-array name="gradient_orientation_string">
        <item>Bottom-Left to Top-Right</item>
        <item>Top to Bottom</item>
        <item>Left to Right</item>
    </string-array>

    <string-array name="gradient_orientation_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>