<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/drawer_messages" />
    </group>

    <item
        android:title="@string/account_section" >
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

    <item
        android:title="@string/other_options">
        <menu>
            <item
                android:id="@+id/drawer_preferences"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/title_activity_settings"/>
        </menu>
    </item>

</menu>