<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:src="@drawable/fab_add"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_backgroundColor="#a0303f9f"
        fab:menu_buttonSpacing="10dp"
        fab:menu_fab_size="normal"
        fab:menu_fab_label="@string/new_new">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/new_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/new_post"
            android:layout_alignTop="@+id/new_post"
            android:layout_marginTop="77dp"
            android:src="@drawable/ic_menu_send"
            fab:fab_size="mini"
            fab:fab_label="@string/fab_new_message" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/new_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="196dp"
            android:layout_marginEnd="28dp"
            android:src="@drawable/ic_menu_share"
            fab:fab_size="mini"
            fab:fab_label="@string/fab_new_post" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>